--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 	path = lib/aave-helpers
 	url = https://github.com/bgd-labs/aave-helpers
 	branch = feat/base-deployment
+[submodule "lib/solidity-utils"]
+	path = lib/solidity-utils
+	url = https://github.com/bgd-labs/solidity-utils
