--- a/foundry.toml
+++ b/foundry.toml
@@ -4,6 +4,7 @@ test = 'tests'
 script = 'scripts'
 out = 'out'
 libs = ['lib']
+ffi=true
 remappings = [
 ]
 fs_permissions = [{ access = "write", path = "./reports" }]
