--- a/package.json
+++ b/package.json
@@ -17,7 +17,15 @@
   },
   "homepage": "https://github.com/bgd-labs/bgd-forge-template#readme",
   "devDependencies": {
-    "prettier": "2.8.7",
-    "prettier-plugin-solidity": "1.1.3"
+    "@bgd-labs/aave-tenderly-cli": "^0.0.13",
+    "env-cmd": "^10.1.0",
+    "prettier": "^2.8.3",
+    "prettier-plugin-solidity": "^1.1.3"
+  },
+  "dependencies": {
+    "@bgd-labs/aave-cli": "^0.0.17",
+    "@inquirer/prompts": "^3.0.0",
+    "commander": "^11.0.0",
+    "viem": "^1.2.9"
   }
 }
