--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bgd-forge-template",
+  "name": "bgd-aave-v3-base-activation",
   "version": "1.0.0",
   "scripts": {
     "lint": "prettier ./",
@@ -7,15 +7,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bgd-labs/bgd-forge-template.git"
+    "url": "git+https://github.com/bgd-labs/aave-v3-basenet-proposal.git"
   },
   "keywords": [],
   "author": "BGD labs",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/bgd-labs/bgd-forge-template/issues"
+    "url": "https://github.com/bgd-labs/aave-v3-basenet-proposal/issues"
   },
-  "homepage": "https://github.com/bgd-labs/bgd-forge-template#readme",
+  "homepage": "https://github.com/bgd-labs/aave-v3-basenet-proposal",
   "type": "module",
   "devDependencies": {
     "@bgd-labs/aave-tenderly-cli": "^0.0.13",
@@ -24,7 +24,7 @@
     "prettier-plugin-solidity": "^1.1.3"
   },
   "dependencies": {
-    "@bgd-labs/aave-cli": "^0.0.18",
+    "@bgd-labs/aave-cli": "^0.0.19",
     "@inquirer/prompts": "^3.0.0",
     "commander": "^11.0.0",
     "viem": "^1.2.9"
