--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ RPC_ARBITRUM=https://arb1.arbitrum.io/rpc
 RPC_FANTOM=https://rpc.ftm.tools
 RPC_HARMONY=https://api.harmony.one
 RPC_METIS=https://andromeda.metis.io/?owner=1088
-RPC_BASE=https://andromeda.metis.io/?owner=1088
+RPC_BASE=https://mainnet.base.org
 
 # Etherscan api keys for verification & download utils
 ETHERSCAN_API_KEY_MAINNET=
